Use non-fixed navbar.
This works better with the ToC sidebar as it's no longer overlapping.

--- a/modules/docs.css
+++ b/modules/docs.css
@@ -39,7 +39,6 @@
  */
 body {
   position: relative; /* For scrollyspy */
-  padding-top: 70px; /* Account for fixed navbar */
 }
 
 /* Keep code small in tables on account of limited space */
